--- a/public/assets/app/css/style.custom.css
+++ b/public/assets/app/css/style.custom.css
@@ -1,5 +1,94 @@
 .form-heading-3 {
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: #575962;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #575962;
+}
+
+.profile .profile-picture {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.profile {
+    position: relative;
+    display: flex;
+    width: 100%;
+    gap: 30px;
+}
+
+.profile-picture-wrapper {
+    position: relative;
+    border-radius: 50%;
+    width: 8rem;
+    height: 8rem;
+    box-shadow: 2px 3px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+.profile-details-wrapper {
+    width: 85%;
+    display: flex;
+    /* padding-top: 10px; */
+    flex-direction: column;
+    justify-content: end;
+}
+
+.profile-picture {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile-img-input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 5;
+}
+
+.profile-picture-wrapper:hover::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.profile-picture-wrapper:hover .flaticon-edit-1 {
+    opacity: 1;
+    z-index: 2;
+}
+
+.flaticon-edit-1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 1.5rem;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.profile-picture-nav {
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 50%;
+    box-shadow: 2px 3px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+.profile-picture-dropdown {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    box-shadow: 2px 3px 4px 0 rgba(0, 0, 0, 0.2);
 }
